# Eightfold-ai-submission

./: .gitignore  DEMO_SCRIPT.md  README.md  pyproject.toml  requirements.txt
data/configs/: custom_compact.json  default.json
data/samples/: ats.json  garbage.json  linkedin_jane.json  make_resume_pdf.py  notes.txt  recruiter.csv
design/: DESIGN.md  architecture.html  demo.html
outputs/: custom_output.json  default_output.json
src/transformer/: __init__.py  cli.py  confidence.py  config.py  matching.py  merge.py  models.py  pipeline.py  projection.py  trust.py  validation.py
src/transformer/normalize/: __init__.py  dates.py  locations.py  phones.py  skills.py  text.py  urls.py
src/transformer/sources/: __init__.py  ats_json.py  base.py  github.py  linkedin.py  recruiter_csv.py  recruiter_notes.py  resume.py
tests/: test_confidence.py  test_gold_profile.py  test_matching.py  test_merge.py  test_normalizers.py  test_projection.py  test_robustness.py  test_validation.py
