[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "Multi-source candidate data transformer: messy inputs -> one canonical profile."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "phonenumbers>=8.13",
    "python-dateutil>=2.9",
    "pypdf>=4.0",          # PDF resume extraction (the sample resume is a .pdf)
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
candidate-transformer = "transformer.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
